Migrates all tests and fixtures from JUnit 4.x to Jupiter
Signed-off-by: Adrian Cole <adrian@tetrate.io>