@@ -17,7 +17,7 @@
   <parent>
     <groupId>io.zipkin.brave</groupId>
     <artifactId>brave-instrumentation-parent</artifactId>
-    <version>5.16.1-SNAPSHOT</version>
+    <version>5.17.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -31,6 +31,20 @@
     <main.basedir>${project.basedir}/../..</main.basedir>
     <!-- Use brave-instrumentation-dubbo for Apache Dubbo 2.7+, not this module. -->
     <dubbo.version>2.6.12</dubbo.version>
+
+    <!-- add opens to avoid below in JRE 21:
+         com.alibaba.dubbo.common.extension.ExtensionLoader -->
+    <maven-surefire-plugin.argLine>
+      --add-opens java.base/java.lang=ALL-UNNAMED
+    </maven-surefire-plugin.argLine>
+    <!-- add opens to avoid below in JRE 21:
+         com.alibaba.com.caucho.hessian.io.JavaSerializer -->
+    <maven-failsafe-plugin.argLine>
+      ${maven-surefire-plugin.argLine}
+      --add-opens java.base/java.lang=ALL-UNNAMED
+      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens java.base/java.math=ALL-UNNAMED
+    </maven-failsafe-plugin.argLine>
   </properties>
 
   <dependencies>
